# namz

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  NAMZ-FORMAT.md  README.md
.github/workflows/: ci.yml  js.yml  python.yml  swift.yml
cli/: namz.cpp
conformance/: README.md  generate.py  manifest.json
conformance/invalid/: bad-codec.namz  bad-dtype.namz  bad-magic.namz  bad-version.namz  lying-metalen.namz  magic-only.namz  trailing-junk.namz  truncated.namz
conformance/rig/: README.md  expected.json
conformance/rig/pack/: Golden-green-07h.namz  Golden-green-12h.namz  Golden-red-07h.namz  rig.json
conformance/vectors/: degenerate-array.namz  edge-floats.nam  edge-floats.namz  empty-weights.nam  empty-weights.namz  flat-noshuffle.namz  flat.nam  flat.namz  integer-weights.nam  integer-weights.namz  metadata.nam  metadata.namz  nested.nam  nested.namz  no-weights.nam  no-weights.namz
docs/: LANGUAGE-PORTS-BRIEF.md
include/: namz.h  namz_rig.h  namz_rig_load.h  namz_rig_write.h
js/: README.md  package.json
js/src/: cli.js  index.js  json.js
js/test/: adversarial.test.js  conformance.test.js  differential.test.js  helpers.js  property.test.js  unit.test.js
python/: .gitignore  LICENSE  README.md  pyproject.toml
python/src/namz/: __init__.py  __main__.py  _codec.py  cli.py
python/tests/: conftest.py  test_adversarial.py  test_conformance.py  test_differential.py  test_property.py  test_unit.py
swift/: Package.swift  README.md
swift/Sources/Namz/: JSON.swift  Namz.swift
swift/Sources/namz-cli/: main.swift
swift/Sources/namz-conformance/: Adversarial.swift  Sections.swift  Support.swift  UnitAndDifferential.swift  main.swift
tests/: adversarial.cpp  conformance.cpp  rig.cpp  rig_conformance.cpp  roundtrip.cpp
